--- a/tp3refactor/top_envsettings.html
+++ b/tp3refactor/top_envsettings.html
@@ -15,24 +15,24 @@
 </tr>
 <tr>
 <td>LD_LIBRARY_PATH</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64</font></td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64</font></td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64</font></td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//lib/lin64</td>
 </tr>
 <tr>
 <td>PATH</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</font></td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</font></td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</font></td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/snap/bin</td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE/</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE/</font></td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE/</font></td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE/</font></td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/nicolas/Xilinx/14.7/ISE_DS/ISE/</td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -329,28 +329,28 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>None</font></td>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-dd</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>_ngo</font></td>
-<td><font color=gray>None</font></td>
+<td>-dd</td>
+<td>&nbsp;</td>
+<td>_ngo</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-p</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>xc3s100e-cp132-4</font></td>
-<td><font color=gray>None</font></td>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xc3s100e-cp132-4</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-uc</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>top.ucf</font></td>
-<td><font color=gray>None</font></td>
+<td>-uc</td>
+<td>&nbsp;</td>
+<td>top.ucf</td>
+<td>None</td>
 </tr>
 </TABLE>
 <A NAME="Map Property Settings"></A>
@@ -365,40 +365,40 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td><font color=gray>-ir</font></td>
-<td><font color=gray>Use RLOC Constraints</font></td>
-<td><font color=gray>OFF</font></td>
-<td><font color=gray>OFF</font></td>
+<td>-ir</td>
+<td>Use RLOC Constraints</td>
+<td>OFF</td>
+<td>OFF</td>
 </tr>
 <tr>
-<td><font color=gray>-cm</font></td>
-<td><font color=gray>Optimization Strategy (Cover Mode)</font></td>
-<td><font color=gray>area</font></td>
-<td><font color=gray>area</font></td>
+<td>-cm</td>
+<td>Optimization Strategy (Cover Mode)</td>
+<td>area</td>
+<td>area</td>
 </tr>
 <tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>None</font></td>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-o</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>top_map.ncd</font></td>
-<td><font color=gray>None</font></td>
+<td>-o</td>
+<td>&nbsp;</td>
+<td>top_map.ncd</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-pr</font></td>
-<td><font color=gray>Pack I/O Registers/Latches into IOBs</font></td>
-<td><font color=gray>off</font></td>
-<td><font color=gray>off</font></td>
+<td>-pr</td>
+<td>Pack I/O Registers/Latches into IOBs</td>
+<td>off</td>
+<td>off</td>
 </tr>
 <tr>
-<td><font color=gray>-p</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>xc3s100e-cp132-4</font></td>
-<td><font color=gray>None</font></td>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xc3s100e-cp132-4</td>
+<td>None</td>
 </tr>
 </TABLE>
 <A NAME="Place and Route Property Settings"></A>
@@ -413,28 +413,28 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td><font color=gray>-t</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>1</font></td>
-<td><font color=gray>1</font></td>
+<td>-t</td>
+<td>&nbsp;</td>
+<td>1</td>
+<td>1</td>
 </tr>
 <tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>&nbsp;</font></td>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>&nbsp;</td>
 </tr>
 <tr>
-<td><font color=gray>-ol</font></td>
-<td><font color=gray>Place & Route Effort Level (Overall)</font></td>
-<td><font color=gray>high</font></td>
-<td><font color=gray>std</font></td>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>high</td>
+<td>std</td>
 </tr>
 <tr>
-<td><font color=gray>-w</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>true</font></td>
-<td><font color=gray>false</font></td>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
 </tr>
 </TABLE>
 <A NAME="Operating System Information"></A>
@@ -451,31 +451,31 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Core(TM) i5-2410M CPU @ 2.30GHz/1818.631 MHz</td>
-<td><font color=gray>Intel(R) Core(TM) i5-2410M CPU @ 2.30GHz/1012.280 MHz</font></td>
-<td><font color=gray>Intel(R) Core(TM) i5-2410M CPU @ 2.30GHz/1030.777 MHz</font></td>
-<td><font color=gray>Intel(R) Core(TM) i5-2410M CPU @ 2.30GHz/2760.386 MHz</font></td>
+<td>Intel(R) Core(TM) i7-3632QM CPU @ 2.20GHz/2544.358 MHz</td>
+<td>Intel(R) Core(TM) i7-3632QM CPU @ 2.20GHz/1351.023 MHz</td>
+<td>Intel(R) Core(TM) i7-3632QM CPU @ 2.20GHz/2940.561 MHz</td>
+<td>Intel(R) Core(TM) i7-3632QM CPU @ 2.20GHz/2537.414 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
-<td>agustin-Dell-System-XPS-L502X</td>
-<td><font color=gray>agustin-Dell-System-XPS-L502X</font></td>
-<td><font color=gray>agustin-Dell-System-XPS-L502X</font></td>
-<td><font color=gray>agustin-Dell-System-XPS-L502X</font></td>
+<td>nicolas-MOV</td>
+<td>nicolas-MOV</td>
+<td>nicolas-MOV</td>
+<td>nicolas-MOV</td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Ubuntu</td>
-<td><font color=gray>Ubuntu</font></td>
-<td><font color=gray>Ubuntu</font></td>
-<td><font color=gray>Ubuntu</font></td>
+<td>Ubuntu</td>
+<td>Ubuntu</td>
+<td>Ubuntu</td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>Ubuntu 16.04.4 LTS</td>
-<td><font color=gray>Ubuntu 16.04.4 LTS</font></td>
-<td><font color=gray>Ubuntu 16.04.4 LTS</font></td>
-<td><font color=gray>Ubuntu 16.04.4 LTS</font></td>
+<td>Ubuntu 16.04.4 LTS</td>
+<td>Ubuntu 16.04.4 LTS</td>
+<td>Ubuntu 16.04.4 LTS</td>
 </tr>
 </TABLE>
 </BODY> </HTML>
